extension name change

--- a/popup/info.html
+++ b/popup/info.html
@@ -1,12 +1,12 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Levelup shortcuts</title>
+    <title>Power Apps shortcuts</title>
     <script src="info.js" defer></script> <!-- Link to the external script -->
     <link rel="stylesheet" href="info.css">
 <body> 
     
-    <h1>Levelup shortcuts</h1>
+    <h1>Power Apps shortcuts</h1>
     <div>Please go to "edge://extensions/shortcuts" and assign shortcuts to actions you need - my suggestions are:</div>
     <ul>
         <li>Alt+Shift+F - open advanced find</li>
