added showing optionset metadata

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -6,13 +6,11 @@
     <link rel="stylesheet" href="options.css" />
   </head>
   <body>
-    <table>
+    <table id="big-table">
       <thead>
         <tr>
-          <th>Name</th>
-          <th>Display name</th>
-          <th>Value</th>
-          <th>State</th>
+          <th>Logical Name</th>
+          <th>Options</th>
         </tr>
       </thead>
       <tbody id="dynamic-content"></tbody>
