added better message exchange for optionsets

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -6,10 +6,15 @@
     <link rel="stylesheet" href="options.css" />
   </head>
   <body>
+    <div id="header" style="padding-left: 10px">
+      <h1>OPTIONSET VALUES</h1>
+      <p>* fields on form are denoted with 🟢</p>
+    </div>
+    <div id="options">
     <table id="big-table">
       <thead>
         <tr>
-          <th>Logical Name</th>
+          <th>Field</th>
           <th>Options</th>
         </tr>
       </thead>
