--- a/popup/info.html
+++ b/popup/info.html
@@ -1,23 +1,24 @@
 <!DOCTYPE html>
 <html>
-<head>
+  <head>
+    <meta charset="utf-8" />
     <title>Power Apps shortcuts</title>
-    <script src="info.js" defer></script> <!-- Link to the external script -->
-    <link rel="stylesheet" href="info.css">
-<body> 
-    
+    <script src="info.js" defer=""></script>
+    <!-- Link to the external script -->
+    <link rel="stylesheet" href="info.css" />
+  </head>
+  <body>
     <h1>Power Apps shortcuts</h1>
     <div>Please go to "edge://extensions/shortcuts" and assign shortcuts to actions you need - my suggestions are:</div>
     <ul>
-        <li>Alt+Shift+F - open advanced find</li>
-        <li>Alt+Shift+G - god mode</li>
-        <li>Alt+Shift+L - locate on form</li>
-        <li>Alt+Shift+O - open entity list</li>
-        <li>Alt+Shift+U - open record</li>
-        <li>Alt+Shift+C - toggle ribbon debug</li>
+      <li>Alt+Shift+F - open advanced find</li>
+      <li>Alt+Shift+G - god mode</li>
+      <li>Alt+Shift+L - locate on form</li>
+      <li>Alt+Shift+O - open entity list</li>
+      <li>Alt+Shift+U - open record</li>
+      <li>Alt+Shift+C - toggle ribbon debug</li>
     </ul>
-        
+
     <button id="open-shortcuts">Take me to shortcuts</button>
-    <div id="footer"><p>TJK 2024</p></div>
-</body>
+  </body>
 </html>
