ext version edit

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -8,7 +8,7 @@
   <body>
     <div id="header" style="padding-left: 10px">
       <h1>OPTIONSET VALUES</h1>
-      <p>* fields on form are denoted with 🟢</p>
+      <p>* fields that are on the form have 🟢 next to them</p>
     </div>
     <div id="options">
     <table id="big-table">
