added show only options that are on the form

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -8,6 +8,10 @@
   <body>
     <div id="header" style="padding-left: 10px">
       <h1>OPTIONSET VALUES</h1>
+      <div>
+        <input type="checkbox" id="formOnlyCheckbox" name="formOnly" style="accent-color: #6a7e9d"/>
+        <label for="horns">Show only those on form</label>
+      </div>
       <p>* fields that are on the form have 🟢 next to them</p>
     </div>
     <div id="options">
