info message update

--- a/popup/info.html
+++ b/popup/info.html
@@ -8,17 +8,10 @@
     <link rel="stylesheet" href="info.css" />
   </head>
   <body>
-    <h1>Power Apps shortcuts</h1>
-    <div>Please go to "edge://extensions/shortcuts" and assign shortcuts to actions you need - my suggestions are:</div>
-    <ul>
-      <li>Alt+Shift+F - open advanced find</li>
-      <li>Alt+Shift+G - god mode</li>
-      <li>Alt+Shift+L - locate on form</li>
-      <li>Alt+Shift+O - open entity list</li>
-      <li>Alt+Shift+U - open record</li>
-      <li>Alt+Shift+C - toggle ribbon debug</li>
-    </ul>
-
+    <div style="display: flex; justify-content: space-evenly">
+      <h2>Power Apps shortcuts</h2>
+    </div>
+    <div>Please go to "edge://extensions/shortcuts" and assign shortcuts to actions you need</div>
     <button id="open-shortcuts">Take me to shortcuts</button>
   </body>
 </html>
