added role count

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -15,6 +15,7 @@
       <p>* fields that are on the form have 🟢 next to them</p>
     </div>
     <div id="options">
+    <div id="options-count"></div>
     <table id="big-table">
       <thead>
         <tr>
