added fetching multiselect optionsets

--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -13,6 +13,7 @@
         <label for="horns">Show only those on form</label>
       </div>
       <p>* fields that are on the form have 🟢 next to them</p>
+      <p>* fields that are multiselect optionsets have Ⓜ️ next to them</p>
     </div>
     <div id="options">
     <div id="options-count"></div>
