added execute fetch xml option

--- a/popup/info.html
+++ b/popup/info.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="info.css" />
   </head>
   <body>
+    <div style="text-align: end">v2.0.0.4</div>
     <div style="display: flex; justify-content: space-evenly">
       <h2>Power Apps shortcuts</h2>
     </div>
