--- a/fetchTab/fetch.html
+++ b/fetchTab/fetch.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
+    <meta charset="utf-8" />
     <title>FetchXml results</title>
     <link rel="stylesheet" href="fetch.css" />
   </head>
