added link to security roles settings

--- a/securityTab/security.html
+++ b/securityTab/security.html
@@ -6,6 +6,8 @@
   </head>
 
   <body>
+    <a id="sec_link" target="_blank" style="display: flex; justify-content: end">Go to security roles</a>
+
     <div id="security-content">User: Test user</div>
     <script src="security.js"></script>
   </body>
