--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Option set values</title>
     <link rel="stylesheet" href="options.css" />
   </head>
   <body>
