added filter for if on form

--- a/fieldsTab/fields.html
+++ b/fieldsTab/fields.html
@@ -11,6 +11,11 @@
       <h1 id="entity-name"></h1>
       <input id="search" placeholder="Search" name="filter" type="text" />
     </div>
+    <div id="filters">
+      <input type="checkbox" id="formOnlyCheckbox" name="formOnly" style="accent-color: #6a7e9d" />
+      <label for="horns">Show only those on form</label>
+    </div>
+    <p>* fields that are on the form have 🟢 next to them</p>
     <div id="fields-content">Results</div>
     <script src="fields.js"></script>
   </body>
