added link to bpf and better condition check

--- a/processDependenciesTab/dependency.html
+++ b/processDependenciesTab/dependency.html
@@ -18,6 +18,8 @@
       <label for="horns">Show only business rules</label>
       <input type="checkbox" id="flowOnlyCheckbox" name="flowOnly" style="accent-color: #6a7e9d" />
       <label for="horns">Show only flows</label>
+      <input type="checkbox" id="bpfOnlyCheckbox" name="bpfOnly" style="accent-color: #6a7e9d" />
+      <label for="horns">Show only BPF</label>
     </div>
     <div id="dependency-content">Results</div>
     <script src="dependency.js"></script>
