open dependency tab and wait for data

--- a/dependenciesTab/dependency.html
+++ b/dependenciesTab/dependency.html
@@ -27,7 +27,10 @@
         <label for="horns">WF</label>
       </div>
     </div>
-    <div id="dependency-content">Results</div>
+
+    <div id="dependency-content">
+      <h2 style="padding: 10px" id="loading">Loading dependencies...</h2>
+    </div>
 
     <script src="dependency.js"></script>
   </body>
