added plugin dependency checker

--- a/dependenciesTab/dependency.html
+++ b/dependenciesTab/dependency.html
@@ -25,6 +25,8 @@
         <label for="horns">BPF</label>
         <input type="checkbox" id="wfCheckbox" name="wf" style="accent-color: #6a7e9d" checked />
         <label for="horns">WF</label>
+        <input type="checkbox" id="plCheckbox" name="pl" style="accent-color: #6a7e9d" checked />
+        <label for="horns">Plugins</label>
       </div>
     </div>
 
