added images to plugins list

--- a/pluginsTab/plugins.html
+++ b/pluginsTab/plugins.html
@@ -12,6 +12,10 @@
       <input id="search" placeholder="Search" name="filter" type="text" style="width: 200px; height: 20px" />
     </div>
 
+    <div id="toggle">
+      <input type="checkbox" id="expandCheck" name="expand" style="accent-color: #6a7e9d" />
+      <label for="horns">Expand all toggle</label>
+    </div>
     <div id="tree"></div>
 
     <script src="plugins.js"></script>
