--- a/pluginsTab/plugins.html
+++ b/pluginsTab/plugins.html
@@ -14,7 +14,7 @@
 
     <div id="toggle">
       <input type="checkbox" id="expandCheck" name="expand" style="accent-color: #6a7e9d" />
-      <label for="horns">Expand all toggle</label>
+      <label for="horns">Expand all</label>
     </div>
     <div id="tree"></div>
 
