--- a/eventsTab/events.html
+++ b/eventsTab/events.html
@@ -8,11 +8,16 @@
 
   <body>
     <div id="header">
-      <h1 id="form-name"></h1>
+      <div style="display: flex; justify-content: space-between">
+        <h1 id="form-name"></h1>
+        <button type="button" style="height: 30px; color: white; background-color: #6a7e9d" id="downloadBtn">Export to excel</button>
+      </div>
       <input id="search" placeholder="Search" name="filter" type="text" />
     </div>
     <div id="libraries-content">Results</div>
     <div id="events-content">Results</div>
+    <script src="../xlsx.full.min.js"></script>
+    <script src="../excelHelper.js"></script>
     <script src="events.js"></script>
   </body>
 </html>
