--- a/optionsTab/options.html
+++ b/optionsTab/options.html
@@ -8,7 +8,10 @@
   </head>
   <body>
     <div id="header" style="padding-left: 10px">
-      <h1>OPTIONSET VALUES</h1>
+      <div style="display: flex; justify-content: space-between">
+        <h1>OPTIONSET VALUES</h1>
+        <button type="button" style="height: 30px; color: white; background-color: #6a7e9d" id="downloadBtn">Export to excel</button>
+      </div>
       <div id="filters">        
         <input type="checkbox" id="formOnlyCheckbox" name="formOnly" style="accent-color: #6a7e9d"/>
         <label for="horns">Show only those on form</label>
@@ -34,6 +37,8 @@
       </thead>
       <tbody id="dynamic-content"></tbody>
     </table>
+    <script src="../xlsx.full.min.js"></script>
+    <script src="../excelHelper.js"></script>
     <script src="options.js"></script>
   </body>
 </html>
