--- a/fetchTab/fetch.html
+++ b/fetchTab/fetch.html
@@ -7,7 +7,13 @@
   </head>
 
   <body>
+    <div style="display: flex; justify-content: space-between">
+      <h1 id="title">Fetched data for entity</h1>
+      <button type="button" style="height: 30px; color: white; background-color: #6a7e9d" id="downloadBtn">Export to excel</button>
+    </div>
     <div id="fetch-content">Results</div>
+    <script src="../xlsx.full.min.js"></script>
+    <script src="../excelHelper.js"></script>
     <script src="fetch.js"></script>
   </body>
 </html>
