--- a/fieldsTab/fields.html
+++ b/fieldsTab/fields.html
@@ -8,7 +8,10 @@
 
   <body>
     <div id="header">
-      <h1 id="entity-name"></h1>
+      <div style="display: flex; justify-content: space-between">
+        <h1 id="entity-name"></h1>
+        <button type="button" style="height: 30px; color: white; background-color: #6a7e9d" id="downloadBtn">Export to excel</button>
+      </div>
       <input id="search" placeholder="Search" name="filter" type="text" />
     </div>
     <div id="filters">
@@ -17,6 +20,8 @@
     </div>
     <p>* fields that are on the form have 🟢 next to them</p>
     <div id="fields-content">Results</div>
+    <script src="../xlsx.full.min.js"></script>
+    <script src="../excelHelper.js"></script>
     <script src="fields.js"></script>
   </body>
 </html>
