added flag for calc and rollup fields

--- a/fieldsTab/fields.html
+++ b/fieldsTab/fields.html
@@ -19,6 +19,7 @@
       <label for="horns">Show only those on form</label>
     </div>
     <p>* fields that are on the form have 🟢 next to them</p>
+    <p>* fields that are calculated have ©️ and that are rollup have ®️ next to them</p>
     <div id="fields-content">Results</div>
     <script src="../xlsx.full.min.js"></script>
     <script src="../excelHelper.js"></script>
