enhance dependency and security tabs with new filters and action checkboxes

--- a/dependenciesTab/dependency.html
+++ b/dependenciesTab/dependency.html
@@ -28,6 +28,8 @@
         <label for="horns">BPF</label>
         <input type="checkbox" id="wfCheckbox" name="wf" style="accent-color: #6a7e9d" checked />
         <label for="horns">WF</label>
+        <input type="checkbox" id="actionCheckbox" name="action" style="accent-color: #6a7e9d" checked />
+        <label for="horns">Actions</label>
         <input type="checkbox" id="plCheckbox" name="pl" style="accent-color: #6a7e9d" checked />
         <label for="horns">Plugins</label>
       </div>
