--- a/securityTab/security.html
+++ b/securityTab/security.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
   <head>
     <title>Security</title>
@@ -6,8 +6,11 @@
   </head>
 
   <body>
-    <a id="sec_link" target="_blank" style="display: flex; justify-content: end">Go to security roles</a>
-
+    <div id="header" style="text-align: center">
+      <a id="sec_link" target="_blank" style="display: flex; justify-content: end">Go to security roles</a>
+      <h1>Security roles info</h1>
+      <input id="search" placeholder="Search" name="filter" type="text" />
+    </div>
     <div id="security-content">User: Test user</div>
     <script src="security.js"></script>
   </body>
